# WebhookBot

./: .gitignore  README.md  pyproject.toml
plugins/webhookplugin/: __init__.py  api.py  command.py  config.py  db.py  sender.py  storage.py
